adds mindmap style

--- a/service/css/simple-sidebar.css
+++ b/service/css/simple-sidebar.css
@@ -123,3 +123,23 @@
         margin-right: 0;
     }
 }
+
+.node {
+  cursor: pointer;
+}
+
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font: 10px sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
+}
